--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Spotify</h1>
   <div class="sidebar"></div>
         <nav>
           <div>
             <a href="">
-              <img src="./assets/icons/Spotify_Logo_CMYK_Black.png" alt="Logo do Spotigy">
+              <img src="./assets/icons/Spotify_Logo_CMYK_Black" alt="Logo do Spotigy">
             </a>
+            <div>
+              <ul>
+                <li>
+                  <a href="">
+                    <span></span>
+                    <span>Início</span>
+                  </a>
+                </li>
+                <li>Buscar</li>
+              </ul>
+            </div>
           </div>
         </nav>
+        <div>
 </body>
 </html>
