--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
           <div>
             <a href="">
-              <img src="./assets/icons/Spotify_Logo_CMYK_Black.png" alt="Logo do Spotify">
+              <img src="./assets/icons/Spotify_Logo_CMYK_Black" alt="Logo do Spotify">
             </a>
             <div>
               <ul>
