--- a/index.html
+++ b/index.html
@@ -4,24 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spotify Imersão</title>
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
+  <link 
+  rel="stylesheet" 
+  href="https://use.fontawesone.com/releases/v5.15.4/css/solid.css"
+  integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE"
+  crossorigin="anonymous"
 </head>
 <body>
   <div class="sidebar"></div>
-        <nav>
-          <div>
+        <nav class="sidebar_navigation">
+          <div class="log">
             <a href="">
               <img src="./assets/icons/Spotify_Logo_CMYK_Black" alt="Logo do Spotify">
             </a>
             <div>
+            <div>
               <ul>
                 <li>
                   <a href="">
-                    <span></span>
+                    <span class="fa fa-home"></span>
                     <span>Início</span>
                   </a>
                 </li>
-                <li>Buscar</li>
+                <li>
+                  <a href="">
+                    <span class="fa fa-search"></span>
+                    <span>Buscar</span>
+                  </a>
+                </li>
               </ul>
             </div>
           </div>
