--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
               <img src="./assets/icons/Spotify_Logo_CMYK_Black" alt="Logo do Spotify">
             </a>
             <div>
-            <div>
               <ul>
                 <li>
                   <a href="">
@@ -35,9 +34,36 @@
                   </a>
                 </li>
               </ul>
-            </div>
-          </div>
         </nav>
+        <div class="library">
+        </div class="library_content">
+        <button class="library_button">
+          <span class="fa fas fa-book"></span>
+          <span>Sua biblioteca</span>
+        </button>
+        <span class="fa fa-plus"></span>
         <div>
+      <div>
+        <section class="section-playlist">
+          <div class="section-playlist__contenc">
+            <span class="text title">Crie sua primeira playlist</span>
+            <span class="text subtitle">É facil, vamos te ajudar</span>
+            <button class="section-playlist__button">
+              <span class="Criar playlist"></span>
+            </button>
+          </div>
+        </section>
+
+        <div class="cookies">
+          <a href="">cookies</a>
+        </div>
+
+        <div class="languages">
+          <button class="languages__button">
+            <span class="fa fa-globe"></span>
+            <span>Portugues do Brasil</span>
+          </button>
+        </div>
+      </div>
 </body>
 </html>
