--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spotify Imersão</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./styles/reset.css">
+  <link rel="stylesheet" href="./styles/sidebar-footer.css">
   <link 
   rel="stylesheet" 
   href="https://use.fontawesone.com/releases/v5.15.4/css/solid.css"
@@ -17,7 +17,7 @@
         <nav class="sidebar_navigation">
           <div class="log">
             <a href="">
-              <img src="./assets/icons/Spotify_Logo_CMYK_Black" alt="Logo do Spotify">
+              <img src="./assets/icons/logo-spotify" alt="Logo do Spotify">
             </a>
             <div>
               <ul>
