--- a/index.html
+++ b/index.html
@@ -1,69 +1,86 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spotify Imersão</title>
-  <link rel="stylesheet" href="./styles/reset.css">
-  <link rel="stylesheet" href="./styles/sidebar-footer.css">
-  <link 
-  rel="stylesheet" 
-  href="https://use.fontawesone.com/releases/v5.15.4/css/solid.css"
-  integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE"
-  crossorigin="anonymous"
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Imersão Alura</title>
+  <link rel="shortcut icon" href="./src/assets/icons/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="src/styles/reset.css" />
+    <link rel="stylesheet" href="src/styles/vars.css" />
+    <link rel="stylesheet" href="src/styles/main-content.css" />
+    <link rel="stylesheet" href="src/styles/sidebar-footer.css" />
+    <link rel="stylesheet" href="src/styles/media-query.css" /> <!--Media queries devem ser chamados depois do CSS principal -->
+
+
+  <link rel="stylesheet" href="src/styles/reset.css" />
+  <link rel="stylesheet" href="src/styles/vars.css" />
+  <link rel="stylesheet" href="src/styles/media-query.css" />
+  <link rel="stylesheet" href="src/styles/main-content.css" />
+  <link rel="stylesheet" href="src/styles/sidebar-footer.css" />
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
+    integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
+    integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous" />
+
 </head>
+
 <body>
-  <div class="sidebar"></div>
-        <nav class="sidebar_navigation">
-          <div class="log">
+    <div class="sidebar">
+      <nav class="sidebar__navigation">
+        <div class="logo">
+          <a href="">
+            <img src="./src/assets/icons/logo-spotify.png" alt="Logo" />
+          </a>
+        </div>
+        <ul>
+          <li>
             <a href="">
-              <img src="./assets/icons/logo-spotify" alt="Logo do Spotify">
+              <span class="fa fa-home"></span>
+              <span>Início</span>
             </a>
-            <div>
-              <ul>
-                <li>
-                  <a href="">
-                    <span class="fa fa-home"></span>
-                    <span>Início</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="">
-                    <span class="fa fa-search"></span>
-                    <span>Buscar</span>
-                  </a>
-                </li>
-              </ul>
-        </nav>
-        <div class="library">
-        </div class="library_content">
-        <button class="library_button">
-          <span class="fa fas fa-book"></span>
-          <span>Sua biblioteca</span>
-        </button>
-        <span class="fa fa-plus"></span>
-        <div>
-      <div>
+          </li>
+          <li>
+            <a href="">
+              <span class="fa fa-search"></span>
+              <span>Buscar</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+  
+      <div class="library">
+        <div class="library__content">
+          <button class="library__button">
+            <span class="fa fas fa-book"></span>
+            <span>Sua biblioteca</span>
+          </button>
+          <span class="fa fa-plus"></span>
+        </div>
+  
         <section class="section-playlist">
-          <div class="section-playlist__contenc">
+          <div class="section-playlist__content">
             <span class="text title">Crie sua primeira playlist</span>
-            <span class="text subtitle">É facil, vamos te ajudar</span>
+            <span class="text subtitle">É fácil, vamos te ajudar.</span>
             <button class="section-playlist__button">
-              <span class="Criar playlist"></span>
+              <span>Criar playlist</span>
             </button>
           </div>
         </section>
-
+  
         <div class="cookies">
-          <a href="">cookies</a>
+          <a href="">Cookies</a>
         </div>
-
+  
         <div class="languages">
           <button class="languages__button">
             <span class="fa fa-globe"></span>
-            <span>Portugues do Brasil</span>
+            <span>Português do Brasil</span>
           </button>
         </div>
       </div>
-</body>
+    </div>
+
+    <main></main>
 </html>
